# quantity-2.0

./: .cruft.json  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  noxfile.py  pyproject.toml  tox.ini
.github/workflows/: ci_workflows.yml
docs/: conf.py  index.rst
licenses/: LICENSE.rst
quantity/: __init__.py  core.py
quantity/tests/: conftest.py  test_operations.py  test_quantity.py
src/quantity/: __init__.py  api.py  core.py  version.py
src/quantity/_src/: __init__.py  api.py  array_api.py  core.py  utils.py
tests/: conftest.py  test_api.py  test_element_wise_functions.py  test_operations.py  test_package.py  test_ufunc.py
